--- a/Mentaru/css/encuesta.css
+++ b/Mentaru/css/encuesta.css
@@ -29,7 +29,7 @@
     -moz-border-radius: 1rem;
     -webkit-border-radius: 1rem;
     padding-top: 1rem;
-    padding-bottom: 0rem;
+    padding-bottom: 1rem;
 }
 
 .form-control-submit-button1 {
@@ -48,7 +48,7 @@
     width: auto;
     margin-top: 1rem;
     margin-bottom: 1rem;
-    margin-left: 3rem;
+    margin-left: 1rem;
     margin-right: 1rem;
     padding-left: 1rem;
     padding-right: 1rem;
@@ -58,5 +58,21 @@
     -moz-border-radius: 1rem;
     -webkit-border-radius: 1rem;
     padding-top: 1rem;
-    padding-bottom: 0rem;
+    padding-bottom: 1rem;
+}
+
+.content4 {
+    width: auto;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    margin-left: 0rem;
+    margin-right: 0rem;
+    padding-left: 0rem;
+    padding-right: 0rem;
+    color: black;
+    border-radius: 1rem;
+    -moz-border-radius: 1rem;
+    -webkit-border-radius: 1rem;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
 }
