--- a/Mentaru/css/encuesta.css
+++ b/Mentaru/css/encuesta.css
@@ -76,3 +76,38 @@
     padding-top: 1rem;
     padding-bottom: 1rem;
 }
+
+.content5 {
+    width: auto;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    margin-left: 0rem;
+    margin-right: 0rem;
+    padding-left: 1rem;
+    padding-right: 0rem;
+    color: #ffffff;
+    background: #ffffff;
+    border-radius: 50px;
+    -moz-border-radius: 50px;
+    -webkit-border-radius: 50px;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+}
+
+.content6 {
+    width: auto;
+    height: auto;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    margin-left: 0rem;
+    margin-right: 0rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    color: black;
+    background: #ffde8d;
+    border-radius: 1rem;
+    -moz-border-radius: 1rem;
+    -webkit-border-radius: 1rem;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+}
